@@ -15,7 +15,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
@@ -25,7 +25,7 @@ public class ConvertListTest {
         in.add(new int[] {1, 7, 8, 3});
         in.add(new int[] {2, 3});
         in.add(new int[] {5, 3, 4});
-        List<Integer> expect = Arrays.asList(1, 7, 8, 3, 2, 3, 5, 3, 4);
+        List<Integer> expect = List.of(1, 7, 8, 3, 2, 3, 5, 3, 4);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
